--- a/data-generator/package.json
+++ b/data-generator/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "mqtt": "^4.2.6",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^15.6.1"
